--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <head>
-      <img src-"WebBanner2023.png" alt- "Banner" Width- "900" height- "300">
+      <img src-"WebBanner2023.png" alt-"Banner" Width-"900" Height-"300">
     </head>
     
 </html>
