--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <head>
     <head>
       <img src-"WebBanner2023.png" alt-"Banner" Width-"900" Height-"300">
+      <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
+      <h2>Student URN: 6866615</h2>
     </head>
     
 </html>
