--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         }
 
         td, th {
-          border: 1px solid #dddddd;
+          border: 1px solid #F8F8F8;
           text-align: left;
           padding: 8px;
         }
 
         tr:nth-child(even) {
-          background-colour: #dddddd;
+          background-colour: #F8F8F8;
         }
 
 
