--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         }
 
         td, th {
-          border: 1px solid #F8F8F8;
+          border: 1px solid #dddddd;
           text-align: left;
           padding: 8px;
         }
 
         tr:nth-child(even) {
-          background-colour: #F8F8F8;
+          background-colour: #dddddd;
         }
 
 
@@ -45,5 +45,6 @@
     <style>
       .myslides {display:none;}
     </style>
+    <body style="background-colour:#FFFFFF;margin-left:50px;">
     
 </html>
