--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <style>
       .myslides {display:none;}
     </style>
-    <body style="background-colour:#FFFFFF;margin-left:50px;">
+    <body style="background-colour:#000000;margin-left:50px;">
     
 </html>
