--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <head>
-      <img src="WebBanner2023.png" alt-"Banner" Width-"700" Height-"200">
+      <img src="WebBanner2023.png" alt-"Banner" Width-"600" Height-"200">
       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>Student URN: 6866615</h2>
       <hr>
@@ -45,6 +45,6 @@
     <style>
       .myslides {display:none;}
     </style>
-    <body style="background-colour:#000000;margin-left:50px;">
+    <body style="background-colour:#FFFFFF;margin-left:50px;">
     
 </html>
