--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <p class="ex1">
         <pre>
-          This paper is ...........
+          This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day.
         </pre>
   </p>
     
