--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <head>
-      <img src="WebBanner2023.png" alt-"Banner" Width-"600" Height-"200">
+      <img src="WebBanner2023.png" alt-"Banner" Width="600" Height="200">
       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>Student URN: 6866615</h2>
       <hr>
@@ -54,10 +54,6 @@
           This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. Thank you for reading.
         </pre>
   </p>
-    <p class="ex1">
-      <pre>
-        This is the introduction paragraph 
-      </pre>
-  </p>
+    
     
 </html>
