--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
           This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. Thank you for reading.
         </pre>
   </p>
+    <p class="ex1">
+      <pre>
+        Introduction paragraph
+      </pre>
+  </p>
     
     
 </html>
