--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
          This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. Thank you for reading.
         </pre>
   </p>
+    <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
       <pre>
         Introduction paragraph
       </pre>
   </p>
+     <h3 id="Analysis and discussion">Analysis and discussion</h3>
     
     
 </html>
