--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
       <p class="ex1">
         <pre>
-         This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. Thank you for reading.
+         This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. 
+         Thank you for reading.
         </pre>
   </p>
     <h3 id="Introduction">Introduction</h3>
