--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
       </pre>
   </p>
      <h3 id="Analysis and discussion">Analysis and discussion</h3>
+    <p class="ex1">
+      <pre>
+        Analysis and discussion paragraph
+      </pre>
+  </p>
     
     
 </html>
