--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
         Analysis and discussion paragraph
       </pre>
   </p>
+    <!table of contents>
+    <table>
+
+      <tr>
+        <th><h3>Table of contents</h3></th>
+      </tr>
+    </table>
     
     
 </html>
