--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
       <tr>
         <th><h3>Table of contents</h3></th>
       </tr>
+      <tr>
+        <td><a href="#Abstract">Abstract</td>
+      </tr>
+      <tr>
+        <td><a href="#Introduction">Introduction</td>
+      </tr>
+      <tr>
+        <td><a href="#References">References</td>
+      </tr>
     </table>
     
     
