--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <td><a href="#References">References</td>
       </tr>
     </table>
+
+    <BR>
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -79,10 +81,10 @@
         Introduction paragraph
       </pre>
   </p>
-     <h3 id="Analysis and discussion">Analysis and discussion</h3>
+     <h3 id="References">References</h3>
     <p class="ex1">
       <pre>
-        Analysis and discussion paragraph
+       References Added here.
       </pre>
   </p>
 </html>
