--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
       <p class="ex1">
         <pre>
          This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. 
-         Thank you for reading.
+         An abstract is a brief summary of a text Max (150 words). A mini version of the paper and must be completely seperate to the rest of the paper. Include a background - why am i writing this?, Purpose of study, 
+         method, conclusion.
         </pre>
   </p>
     <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
       <pre>
-        Introduction paragraph
+        Introduction paragraph - First sentence must be a hook to engage the reader, then purpose so identifying what the paper is about and then talk about structure - explain how the paper will be structured.
       </pre>
   </p>
      <h3 id="References">References</h3>
