--- a/index.html
+++ b/index.html
@@ -88,4 +88,14 @@
        References Added here.
       </pre>
   </p>
+    <p id="date&time"></p>
+
+    <script>
+
+      //javascript to display the date and time on my webpage
+
+      const d = new Date();
+      document.getElementByld("date&time").innerHTML=d;
+      
+    </script>
 </html>
