--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
       <script>
         async function getLastUpdatedTime() {
-          const username = 'jh02842';
+          const username = 'FEPSFY6866615';
           const repo = 'FY6866615';
 
-          const url = 'https://api.github/repos/${jh02842}/${FY6866615}/commits';
+          const url = 'https://api.github/repos/${FEPSFY6866615}/${FY6866615}/commits';
 
           try {
             const response = await fetch(url, {
