--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </p>
     <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
-      <pre>
+      <pre id="Introduction_InText">
         Introduction paragraph - First sentence must be a hook to engage the reader, then purpose so identifying what the paper is about and then talk about structure - explain how the paper will be structured.
       </pre>
   </p>
@@ -148,6 +148,35 @@
        References Added here.
       </pre>
   </p>
+
+    <!-- Placeholder for total word count -->
+<p id="totalWordCount"></p>
+<hr>
+<script>
+  // Function to calculate and display word count for a specified section
+  function displayWordCount(sectionId, outputId) {
+    // Get the text content from the specified section
+    const text = document.getElementById(sectionId).textContent;
+    // Split text into words based on spaces and filter out any empty strings
+    const wordArray = text.trim().split(/\s+/);
+    // Count the words
+    const wordCount = wordArray.length;
+    // Return the word count for summing purposes
+    return wordCount;
+  }
+  // Function to calculate and display total word count from selected sections
+  function displayTotalWordCount() {
+    // Calculate word count for each section and accumulate the total
+    const IntroductionCount = displayWordCount("Introduction_InText");
+    const AnalysisCount = displayWordCount("Analysis_InText");
+    // Calculate the sum of all selected sections
+    const totalWordCount = IntroductionCount + AnalysisCount;
+    // Display the total word count
+    document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
+  }
+  // Run the function for specific sections and display total count when the page loads
+  window.onload = displayTotalWordCount;
+
    
 </html>
 
