--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
         <td><a href="#Introduction">Introduction</td>
       </tr>
       <tr>
+        <td><a href="#History">History</td>
+      </tr>  
+      <tr>
+        <td><a href="#Soft Bodied Development">Soft Bodied Development</td>
+      </tr>  
+      <tr>
+        <td><a href="#Conclusion">Conclusion</td>
+      </tr>  
+      <tr>
         <td><a href="#References">References</td>
       </tr>
     </table>
