--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>Student URN: 6866615</h2>
       <hr>
-      <h2 style="font-family:calibri:"><b>Conference paper : To be determined</b></h2>
+      <h2 style="font-family:calibri:"><b>Conference paper : How has the development of soft bodied mechanisms revolutionized deep sea exploration?</b></h2>
       <hr>
       <!style for tables>
       <style>
