--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <pre id="Soft Bodied Development_InText">
         Soft Bodied Development paragraph :)
       </pre> 
+    ![Figure 1 – Bioinspired soft robots for deep-sea exploration (2023)](https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png)
   </p>
 
     <h3 id="Conclusion">Conclusion</h3>  
