--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         Soft Bodied Development paragraph :)
       </pre> 
   </p>
-     ![Figure 1 – Bioinspired soft robots for deep-sea exploration (2023)](https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png)
+     <img src="SoftBodiedMechanismExample.png" alt="Figure displaying an example of a soft bodied mechanism" Width="250" height="250"
 
     <h3 id="Conclusion">Conclusion</h3>  
     <p class="ex1">
