--- a/index.html
+++ b/index.html
@@ -121,8 +121,11 @@
         Soft Bodied Development paragraph :)
       </pre> 
   </p>
+    
+    <head>
      <img src="SoftBodiedMechanismExample.png" alt="Figure displaying an example of a soft bodied mechanism" Width="250" height="250"
-
+    </head>
+      
     <h3 id="Conclusion">Conclusion</h3>  
     <p class="ex1">
       <pre id="Conclusion_InText">
