--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
     <h3 id="History">History</h3>
     <p class="ex1">
       <pre id="History_InText">
-        History Paragraph :)
+        History Paragraph
       </pre>  
   </p>
 
     <h3 id="Soft Bodied Development">Soft Bodied Development</h3> 
     <p class="ex1">
       <pre id="Soft Bodied Development_InText">
-        Soft Bodied Development paragraph :)
+        Soft Bodied Development paragraph
       </pre> 
   </p>
     
@@ -129,7 +129,7 @@
     <h3 id="Conclusion">Conclusion</h3>  
     <p class="ex1">
       <pre id="Conclusion_InText">
-        Conclusion :)
+        Conclusion
       </pre>  
   </p>
     
