--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
      <h3 id="References">References</h3>
     <p class="ex1">
       <pre id="References_InText">
-       References Added here.
+       '<a href=" https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023
+         _42882_Fig5_HTML.png">-	Bioinspired soft robots for deep-sea exploration (2023) Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023
+         _42882_Fig5_HTML.png (Accessed: 13/11/2024).</a>
       </pre>
   </p>
 
