--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
       </style>
 
+       <style>
+        p.ex2 {
+          margin-left: 0px;
+        }
+      </style>
+      
       <style>
         p.ex1 {
           margin-left: 250px;
@@ -137,7 +143,7 @@
   </p>
     
      <h3 id="References">References</h3>
-    <p class="ex1">
+    <p class="ex2">
       <pre id="References_InText">
        <a href=" https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png">
          - Bioinspired soft robots for deep-sea exploration (2023) Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png 
