--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <p class="ex2">
       <pre id="References_InText">
        <a href=" https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png">
-- Bioinspired soft robots for deep-sea exploration (2023) Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png 
+- springernature (2023) 'Bioinspired soft robots for deep-sea exploration' Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png 
          (Accessed: 13/11/2024).</a>
 
       <a href="https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536">
