--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
 
       <a href="https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536">
 - Chen, S. et al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', (December).</a>
+
+      <a href="https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals">
+- Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', (November).</a>
       </pre>
   </p>
 
