--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
       <pre id="References_InText">
 
       <a href="https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536">
--Chen, S. et al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', (December).</a>
+-Chen, S. et al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', (December), (Accessed: 29/10/24).</a>
 
       <a href="https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals">
--Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', (November).</a>
+-Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', (November), (Accessed: 1/11/24).</a>
 
       <a href="https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/">
 -Marranzino, A. (2017) OceanBites - Ocean tech: using robots to conduct deep-sea exploration. Available at: https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/ (Accessed: 30/10/24).</a>
@@ -151,7 +151,7 @@
          (Accessed: 13/11/2024).</a>
 
       <a href="https://www.proquest.com/docview/2806548792?pq-origsite=primo&sourcetype=Scholarly%20Journals">
--Weicheng, C. Lian, L. Guang , P. (2023) 'Frontiers in Deep-Sea Equipment and Technology', (Volume 1, April).</a>
+-Weicheng, C. Lian, L. Guang , P. (2023) 'Frontiers in Deep-Sea Equipment and Technology', (Volume 1, April), (Accessed: 29/10/24).</a>
       </pre>
   </p>
 
