--- a/index.html
+++ b/index.html
@@ -89,38 +89,38 @@
 
       <p class="ex1">
         <pre>
-         This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. 
-         An abstract is a brief summary of a text Max (150 words). A mini version of the paper and must be completely seperate to the rest of the paper. Include a background - why am i writing this?, Purpose of study, 
-         method, conclusion.
+        This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. 
+        An abstract is a brief summary of a text Max (150 words). A mini version of the paper and must be completely seperate to the rest of the paper. Include a background - why am i writing this?, Purpose of study, 
+        method, conclusion.
         </pre>
   </p>
     
     <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
       <pre id="Introduction_InText">
-       The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% (NOAA, 2024), creates an alluring field where both technology and knowledge can be
-        developed. This, however, due to the extreme pressures produced by the different depths of the oceans, has required the development of technology such as unmanned vessels and pressure resistant hulls (cui, Weicheng,
-        Lian, Lian, Pan, Guang, 2023). These developments, however, were also accompanied by a range of limitations such as increased weight and reduced adaptability, this led to the further development of technology to
-        produce soft bodied mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, (Li, Guorui. Et al. (2023).
+       The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% (NOAA, 2024), creates an alluring field where both technology and knowledge can be 
+       developed. This, however, due to the extreme pressures produced by the different depths of the oceans, has required the development of technology such as unmanned vessels and pressure resistant hulls (cui, Weicheng.
+       Lian, Lian. Pan, Guang. 2023). These developments, however, were also accompanied by a range of limitations such as increased weight and reduced adaptability, this led to the further development of technology to produce
+       soft bodied mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, (Li, Guorui. Et al. (2023).
       </pre>
   </p>
     
     <h3 id="History">History</h3>
     <p class="ex1">
       <pre id="History_InText">
-        Originally deep-sea exploration was conducted by submersibles, these vehicles were designed to be manned by a small number of passengers and often had to be connected to a ship via a fiber optic cable which transferred
-        the array of data that was collected. This technology, whilst effective during the emergence of deep-sea exploration, soon became ineffective with the invention of ROVS (Remotely operated Vehicles). ROVS removed the
-        time limitations created by the human passengers and decreased the risk of human harm, allowing vehicles to reach deeper and more remote areas.  (Marranzino, 2017).  However, due to the use of the fiber optic umbilical
-        cord that attached to these types of machines transmitting data to a ship, maneuverability and adaptability was minimal. This led to the development of Autonomous Underwater Vehicles (AUVS) which are highly maneuverable,
-        self-propelled and must be mapped to a specific path using code. AUVS are also used cooperatively with other vehicles to create a large system for exploration that is more cost effective and efficient. (cui, Weicheng,
-        Lian, Lian, Pan, Guang, 2023).
+       Originally deep-sea exploration was conducted by submersibles, these vehicles were designed to be manned by a small number of passengers and often had to be connected to a ship via a fiber optic cable which transferred
+       the array of data that was collected. This technology, whilst effective during the emergence of deep-sea exploration, soon became ineffective with the invention of ROVS (Remotely operated Vehicles). ROVS removed the time
+       limitations created by the human passengers and decreased the risk of human harm, allowing vehicles to reach deeper and more remote areas.  (Marranzino, 2017).  However, due to the use of the fiber optic umbilical cord
+       that attached to these types of machines transmitting data to a ship, maneuverability and adaptability was reduced. This led to the development of Autonomous Underwater Vehicles (AUVS) which are highly maneuverable, 
+       self-propelled and must be mapped to a specific path using code. AUVS are also used cooperatively with other vehicles to create a large system for exploration that is more cost effective and efficient. (cui, Weicheng, Lian,
+       Lian, Pan, Guang, 2023).
 
-        To ensure these vehicles can survive the extreme pressures of the ocean the material had to also be developed, creating a material that is strong and durable whilst also ensuring the vehicle is light weight was a necessity
-        in the production of these vehicles as it ensures they are maneuverable and can effectively function when acted upon by higher pressures. The use of light composite materials combined with a type of high strength metal
-        such as steel or aluminum is currently a popular solution for creating a pressure resistant hull. Materials such as stainless steel and Aluminum are used over an array of other materials due to their strength but also
-        because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. (Sheng, Chen. Et, al.(2021) This, however, also had its faults as
-        composite materials vary in quality during construction and are also very expensive to produce. (cui, Weicheng, Lian, Lian, Pan, Guang, 2023). The use of pressure resistant hulls as well as being expensive, greatly reduces
-        the maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. (cui, Weicheng, Lian, Lian, Pan, Guang, 2023).
+       To ensure these vehicles can survive the extreme pressures of the ocean the material had to also be developed, creating a material that is strong and durable whilst also ensuring the vehicle is light weight was a necessity 
+       in the production of these vehicles as it ensures they are maneuverable and can effectively function when acted upon by higher pressures. The use of light composite materials combined with a type of high strength metal 
+       such as steel or aluminum is currently a popular solution for creating a pressure resistant hull. Materials such as stainless steel and Aluminum are used over an array of other materials due to their strength but also
+       because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. (Sheng, Chen. Et, al.(2021) This, however, also had its faults as 
+       composite materials vary in quality during construction and are also very expensive to produce. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023). The use of pressure resistant hulls as well as being expensive, greatly reduces 
+       the maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023).
 
       </pre>  
   </p>
@@ -161,7 +161,7 @@
 
          <a href=" https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png">
 -springernature (2023) 'Bioinspired soft robots for deep-sea exploration' Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png 
-         (Accessed: 13/11/2024).</a>
+ (Accessed: 13/11/2024).</a>
 
       <a href="https://www.proquest.com/docview/2806548792?pq-origsite=primo&sourcetype=Scholarly%20Journals">
 -Weicheng, C. Lian, L. Guang , P. (2023) 'Frontiers in Deep-Sea Equipment and Technology', (Volume 1, April), (Accessed: 29/10/24).</a>
