--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
       <pre id="Introduction_InText">
-    The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% (NOAA, 2024), creates an alluring field where both technology and knowledge can be 
+    The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% [(NOAA, 2024)](#References), creates an alluring field where both technology and knowledge can be 
     developed. This, however, due to the extreme pressures produced by the different depths of the oceans, has required the development of technology such as unmanned vessels and pressure resistant hulls (cui, Weicheng.
     Lian, Lian. Pan, Guang. 2023). These developments, however, were also accompanied by a range of limitations such as increased weight and reduced adaptability, this led to the further development of technology to produce
     soft bodied mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, (Li, Guorui. Et al. (2023).
@@ -110,7 +110,7 @@
       <pre id="History_InText">
     Originally deep-sea exploration was conducted by submersibles, these vehicles were designed to be manned by a small number of passengers and often had to be connected to a ship via a fiber optic cable which transferred
     the array of data that was collected. This technology, whilst effective during the emergence of deep-sea exploration, soon became ineffective with the invention of ROVS (Remotely operated Vehicles). ROVS removed the time
-    limitations created by the human passengers and decreased the risk of human harm, allowing vehicles to reach deeper and more remote areas.  (Marranzino, 2017).  However, due to the use of the fiber optic umbilical cord
+    limitations created by the human passengers and decreased the risk of human harm, allowing vehicles to reach deeper and more remote areas. (Marranzino, 2017).  However, due to the use of the fiber optic umbilical cord
     that attached to these types of machines transmitting data to a ship, maneuverability and adaptability was reduced. This led to the development of Autonomous Underwater Vehicles (AUVS) which are highly maneuverable, 
     self-propelled and must be mapped to a specific path using code. AUVS are also used cooperatively with other vehicles to create a large system for exploration that is more cost effective and efficient. (cui, Weicheng, Lian,
     Lian, Pan, Guang, 2023).
