--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
       <pre id="Introduction_InText">
-    The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% [(NOAA, 2024)](#References), creates an alluring field where both technology and knowledge can be 
+    The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% (NOAA, 2024), creates an alluring field where both technology and knowledge can be 
     developed. This, however, due to the extreme pressures produced by the different depths of the oceans, has required the development of technology such as unmanned vessels and pressure resistant hulls (cui, Weicheng.
     Lian, Lian. Pan, Guang. 2023). These developments, however, were also accompanied by a range of limitations such as increased weight and reduced adaptability, this led to the further development of technology to produce
     soft bodied mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, (Li, Guorui. Et al. (2023).
