--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     To ensure these vehicles can survive the extreme pressures of the ocean the material had to also be developed, creating a material that is strong and durable whilst also ensuring the vehicle is light weight was a necessity 
     in the production of these vehicles as it ensures they are maneuverable and can effectively function when acted upon by higher pressures. The use of light composite materials combined with a type of high strength metal 
     such as steel or aluminum is currently a popular solution for creating a pressure resistant hull. Materials such as stainless steel and Aluminum are used over an array of other materials due to their strength but also
-    because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. (Sheng, Chen. Et, al.(2021) This, however, also had its faults as 
+    because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. (Sheng, Chen. Et, al. 2021) This, however, also had its faults as 
     composite materials vary in quality during construction and are also very expensive to produce. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023). The use of pressure resistant hulls as well as being expensive, greatly reduces 
     the maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023).
 
@@ -148,10 +148,12 @@
       <pre id="References_InText">
 
       <a href="https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536">
--Chen, S. et al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', (December), (Accessed: 29/10/24).</a>
+-Chen, S. et al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', Advances in civil engineering, 2021(1), 
+ Available at: https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536 (Accessed: 29/10/24).</a>
 
       <a href="https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals">
--Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', (November), (Accessed: 1/11/24).</a>
+-Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', Nature communications, 14(1),  
+ Available at : https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals (Accessed: 13/11/24) .</a>
 
       <a href="https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/">
 -Marranzino, A. (2017) OceanBites - Ocean tech: using robots to conduct deep-sea exploration. Available at: https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/ (Accessed: 30/10/24).</a>
@@ -164,8 +166,22 @@
  (Accessed: 13/11/2024).</a>
 
       <a href="https://www.proquest.com/docview/2806548792?pq-origsite=primo&sourcetype=Scholarly%20Journals">
--Weicheng, C. Lian, L. Guang , P. (2023) 'Frontiers in Deep-Sea Equipment and Technology', (Volume 1, April), (Accessed: 29/10/24).</a>
-      </pre>
+-Weicheng, C. Lian, L. Guang , P. (2023) 'Frontiers in Deep-Sea Equipment and Technology', Journal of marine science and engineering, 11(4), 
+ Available at : https://www.proquest.com/docview/2806548792?pq-origsite=primo&sourcetype=Scholarly%20Journals (Accessed: 29/10/24)  </a>
+
+      <a href="https://pubs-aip org.surrey.idm.oclc.org/aip/acp/article/1648/1/650007/769493/Survivability-design-for-a-hybrid-underwater">
+-Wang, B. et al. (2015) 'Survivability design for a hybrid underwater vehicle.', AIP Conf. Proc. 1648,  
+ Available at : https://pubs-aip org.surrey.idm.oclc.org/aip/acp/article/1648/1/650007/769493/Survivability-design-for-a-hybrid-underwater (Accessed: 3/12/24)  </a>
+
+     <a href="https://www.science.org/doi/10.1126/scirobotics.aax5425">
+-Sinatra, N. et al. (2019) ' Ultra gentle manipulation of delicate structures using a soft robotic gripper', Science Robotics, 4(33), 
+ Available at : https://www.science.org/doi/10.1126/scirobotics.aax5425 (Accessed: 03/12/24)   </a>
+
+      <a href="https://onlinelibrary-wiley-com.surrey.idm.oclc.org/doi/full/10.1002/aisy.202300699">
+-Xu, Y. et al. (2024) 'A bioinspired shape memory alloy based soft robotic system for deep sea exploration', Advanced intelligent systems, 6(5), 
+ Available at: https://onlinelibrary-wiley-com.surrey.idm.oclc.org/doi/full/10.1002/aisy.202300699  (Accessed: 02/12/24). </a>
+
+       </pre>
   </p>
 
 <!-- Last commit time display -->
