--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 -Weicheng, C. Lian, L. Guang , P. (2023) 'Frontiers in Deep-Sea Equipment and Technology', Journal of marine science and engineering, 11(4), 
  Available at : https://www.proquest.com/docview/2806548792?pq-origsite=primo&sourcetype=Scholarly%20Journals (Accessed: 29/10/24)  </a>
 
-      <a href="https://pubs-aip org.surrey.idm.oclc.org/aip/acp/article/1648/1/650007/769493/Survivability-design-for-a-hybrid-underwater">
+      <a href="https://pubs-aip-org.surrey.idm.oclc.org/aip/acp/article/1648/1/650007/769493/Survivability-design-for-a-hybrid-underwater">
 -Wang, B. et al. (2015) 'Survivability design for a hybrid underwater vehicle.', AIP Conf. Proc. 1648,  
  Available at : https://pubs-aip org.surrey.idm.oclc.org/aip/acp/article/1648/1/650007/769493/Survivability-design-for-a-hybrid-underwater (Accessed: 3/12/24)  </a>
 
