--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
      <img src="SoftBodiedmechanismExample.png" alt="Figure displaying an example of a soft bodied mechanism" Width="350" height="350"
     </head>
       
+    <p class="ex1">
+      <pre id="Figure_InText">
+    Figure 1 – Examples of the type of mechanisms affected by the development of soft technology (Bioinspired soft robots for deep-sea exploration, 2023) 
+      </pre>
+    </p>
+      
     <h3 id="Conclusion">Conclusion</h3>  
     <p class="ex1">
       <pre id="Conclusion_InText">
