--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
       
     <p class="ex1">
       <pre id="Figure_InText">
+        <body style="Font-size: 8px; colour: black">
     Figure 1 – Examples of the type of mechanisms affected by the development of soft technology (Bioinspired soft robots for deep-sea exploration, 2023) 
       </pre>
+        </body>
     </p>
       
     <h3 id="Conclusion">Conclusion</h3>  
