--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
       
     <p class="ex1">
       <pre id="Figure_InText">
-        <body style="Font-size: 4px; colour: black">
+        <body style="Font-size: 4px; colour: blue">
     Figure 1 – Examples of the type of mechanisms affected by the development of soft technology (Bioinspired soft robots for deep-sea exploration, 2023) 
-      </pre>
         </body>
+      </pre>
     </p>
       
     <h3 id="Conclusion">Conclusion</h3>  
