--- a/index.html
+++ b/index.html
@@ -136,11 +136,9 @@
      <img src="SoftBodiedmechanismExample.png" alt="Figure displaying an example of a soft bodied mechanism" Width="400" height="400"
     </head>
       
-    <p class="ex1">
+    <p style="font-size: 6px">
       <pre id="Figure_InText">
-        <body style="Font-size: 4px; colour: blue">
     Figure 1 – Examples of the type of mechanisms affected by the development of soft technology (Bioinspired soft robots for deep-sea exploration, 2023) 
-        </body>
       </pre>
     </p>
       
