--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
       </pre> 
   </p>
     
-    <head>
+    <figure>
      <img src="SoftBodiedmechanismExample.png" alt="Figure displaying an example of a soft bodied mechanism" Width="400" height="400"
-    </head>
+    </figure>
       
     <p style="font-size: 2px">
       <pre id="Figure_InText">
