--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     
     <figure>
      <img src="SoftBodiedmechanismExample.png" alt="Figure displaying an example of a soft bodied mechanism" Width="400" height="400"
+       <figcaption> Figure 1 – Examples of the type of mechanisms affected by the development of soft technology (Bioinspired soft robots for deep-sea exploration, 2023) </figcaption>  
     </figure>
       
     <p style="font-size: 2px">
