--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     To ensure these vehicles can survive the extreme pressures of the ocean the material had to also be developed, creating a material that is strong and durable whilst also ensuring the vehicle is light weight was a necessity 
     in the production of these vehicles as it ensures they are maneuverable and can effectively function when acted upon by higher pressures. The use of light composite materials combined with a type of high strength metal 
     such as steel or aluminum is currently a popular solution for creating a pressure resistant hull. Materials such as stainless steel and Aluminum are used over an array of other materials due to their strength but also
-    because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. (Sheng, Chen. Et, al. 2021) This, however, also had its faults as 
-    composite materials vary in quality during construction and are also very expensive to produce. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023). The use of pressure resistant hulls as well as being expensive, greatly reduces 
+    because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> 
+    This, however, also had its faults as composite materials vary in quality during construction and are also very expensive to produce. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023). The use of pressure resistant hulls as well as being expensive, greatly reduces 
     the maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023).
 
       </pre>  
@@ -154,6 +154,7 @@
       <pre id="References_InText">
 
       <a href="https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536">
+      <a id="(chen, s. et al. (2021))">chen, s. et al. (2021)</a>
 -Chen, S. et al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', Advances in civil engineering, 2021(1), 
  Available at: https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536 (Accessed: 29/10/24).</a>
 
