--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <pre id="References_InText">
 
       <a href="https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536">
- <id="(Chen, s. et, al. (2021))">-Chen, S. et al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', Advances in civil engineering, 2021(1), 
+ < id="(Chen, s. et, al. (2021))">-Chen, s. et, al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', Advances in civil engineering, 2021(1), 
  Available at: https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536 (Accessed: 29/10/24).</a>
 
       <a href="https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals">
