--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     <p class="ex1">
       <pre id="Introduction_InText">
     The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% (NOAA, 2024), creates an alluring field where both technology and knowledge can be 
-    developed. This, however, due to the extreme pressures produced by the different depths of the oceans, has required the development of technology such as unmanned vessels and pressure resistant hulls (cui, Weicheng.
-    Lian, Lian. Pan, Guang. 2023). These developments, however, were also accompanied by a range of limitations such as increased weight and reduced adaptability, this led to the further development of technology to produce
-    soft bodied mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, (Li, Guorui. Et al. (2023).
+    developed. This, however, due to the extreme pressures produced by the different depths of the oceans, has required the development of technology such as unmanned vessels and pressure resistant hulls ( Weicheng, c. et 
+    al. (2023)). These developments, however, were also accompanied by a range of limitations such as increased weight and reduced adaptability, this led to the further development of technology to produce soft bodied
+    mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, (Li, Guorui. Et al. (2023).
       </pre>
   </p>
     
@@ -112,15 +112,14 @@
     the array of data that was collected. This technology, whilst effective during the emergence of deep-sea exploration, soon became ineffective with the invention of ROVS (Remotely operated Vehicles). ROVS removed the time
     limitations created by the human passengers and decreased the risk of human harm, allowing vehicles to reach deeper and more remote areas. (Marranzino, 2017).  However, due to the use of the fiber optic umbilical cord
     that attached to these types of machines transmitting data to a ship, maneuverability and adaptability was reduced. This led to the development of Autonomous Underwater Vehicles (AUVS) which are highly maneuverable, 
-    self-propelled and must be mapped to a specific path using code. AUVS are also used cooperatively with other vehicles to create a large system for exploration that is more cost effective and efficient. (cui, Weicheng, Lian,
-    Lian, Pan, Guang, 2023).
+    self-propelled and must be mapped to a specific path using code. AUVS are also used cooperatively with other vehicles to create a large system for exploration that is more cost effective and efficient. ( Weicheng, c. et al. (2023)).
 
     To ensure these vehicles can survive the extreme pressures of the ocean the material had to also be developed, creating a material that is strong and durable whilst also ensuring the vehicle is light weight was a necessity 
     in the production of these vehicles as it ensures they are maneuverable and can effectively function when acted upon by higher pressures. The use of light composite materials combined with a type of high strength metal 
     such as steel or aluminum is currently a popular solution for creating a pressure resistant hull. Materials such as stainless steel and Aluminum are used over an array of other materials due to their strength but also
-    because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> 
-    This, however, also had its faults as composite materials vary in quality during construction and are also very expensive to produce. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023). The use of pressure resistant hulls as well 
-    as being expensive, greatly reduces maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. (cui, Weicheng. Lian, Lian. Pan, Guang. 2023).
+    because the corrosion rate of these materials decreases with the depth. This reaction occurs due to the decrease in both temperature level and oxygen. <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> This, however, also had 
+    its faults as composite materials vary in quality during construction and are also very expensive to produce. ( Weicheng, c. et al. (2023)). The use of pressure resistant hulls as well as being expensive,
+    greatly reduces maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c. et al. (2023))</I></a>
 
       </pre>  
   </p>
@@ -176,7 +175,7 @@
  Available at : https://www.science.org/doi/10.1126/scirobotics.aax5425 (Accessed: 03/12/24)   </a>
 
       <a href="https://www.proquest.com/docview/2806548792?pq-origsite=primo&sourcetype=Scholarly%20Journals">
--Weicheng, C. Lian, L. Guang , P. (2023) 'Frontiers in Deep-Sea Equipment and Technology', Journal of marine science and engineering, 11(4), 
+<pre id="( Weicheng, c. et al. (2023))">-Weicheng, C. et al. (2023) 'Frontiers in Deep-Sea Equipment and Technology', Journal of marine science and engineering, 11(4), 
  Available at : https://www.proquest.com/docview/2806548792?pq-origsite=primo&sourcetype=Scholarly%20Journals (Accessed: 29/10/24)  </a>
 
       <a href="https://pubs-aip-org.surrey.idm.oclc.org/aip/acp/article/1648/1/650007/769493/Survivability-design-for-a-hybrid-underwater">
